--- a/templates/paginaDocente/registro-estudiante.html
+++ b/templates/paginaDocente/registro-estudiante.html
@@ -104,10 +104,10 @@
               </div>
               <div class ="col-md-5">
                   <label class="checkbox-inline">
-                      <input type="radio" id="genero" name='sexo' value="M"> Masculino
+                      <input type="radio" name='sexo' value="M"> Masculino
                   </label>
                   <label class="checkbox-inline">
-                      <input type="radio" id="genero" name='sexo' value="F"> Femenino
+                      <input type="radio" name='sexo' value="F"> Femenino
                   </label>
               </div>
             </div>
