--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -87,7 +87,7 @@
                         <a href="{% url 'lista-grupos' %}"><i class="fa fa-fw fa-users"></i> Grupos</a>
                     </li>
                     <li>
-                        <a href="{% url 'notas' %}"><i class="fa fa-fw fa-file-text-o"></i> Notas</a>
+                        <!-- <a href="{% url 'notas' %}"><i class="fa fa-fw fa-file-text-o"></i> Notas</a> -->
                     </li>
                     <li>
                         <a href="{% url 'registro-estudiante' %}"><i class="fa fa-fw fa-edit"></i> Registro Estudiantes</a>
