--- a/templates/login-estudiante.html
+++ b/templates/login-estudiante.html
@@ -90,6 +90,9 @@ $(document).ready(function() {
 	
 	<!--CONTENT-->
     <div class="content">
+    {% if error %}
+        <div class="alert alert-danger"> {{ error }} </div>
+      {% endif %}
 	<!--USERNAME--><input name="usuario" id="id_usuario" type="text" class="input username" value="Username" onfocus="this.value=''" /><!--END USERNAME-->
 
     <!--PASSWORD--><input name="clave" id="id_clave" type="password" class="input password" value="Password" onfocus="this.value=''" /><!--END PASSWORD-->
