--- a/templates/plantilla2.html
+++ b/templates/plantilla2.html
@@ -171,6 +171,7 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="{% static 'javascript/jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/jquery-1.11.2.min.js' %}"></script>
+    <script src="{% static 'javascript/js_scripts.js' %}"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static 'vendors/bootstrap-3.3.6/js/transition.js' %}"></script>
     <script src="{% static 'vendors/bootstrap-3.3.6/dist/js/bootstrap.js' %}"></script>
