--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm1.html
@@ -84,7 +84,7 @@
           {% for row in respuesta %}
           <div class="col-sm-6 col-md-6">
               <strong>{{ row.pregunta.descripcion }}</strong>
-              <input class="form-control" type="text" id="{{ row.id }}" name="{{ row.descripcion }}" value="">
+              <input class="form-control" type="text" id="{{ row.id }}" name="{{ row.descripcion }}" value="" onkeyup="this.value=this.value.toLowerCase()">
           </div>
           {% endfor %}
         </div>
