--- a/templates/paginaDocente/reporte_estudiantes.html
+++ b/templates/paginaDocente/reporte_estudiantes.html
@@ -1,44 +1,80 @@
-<style>
-    @page {
-        size: letter landscape;
-        margin: 2cm;
-    }
-    .table-bordered {
-        border: 1px solid #ddd;
-     }
-    .table {
-        display: table;
-        border-collapse: separate;
-        border-spacing: 2px;
-        border-color: grey;
-    }
-</style>
+<!DOCTYPE html>
+<html>
+    <head>
+      <title>Reporte</title>
+        <meta http-equiv = "Content-Type" content = "text/html; charset = iso-8859-1" />
+        <style >
+        @page {
+             margin: 0px;
+             padding: 15px;
+         }
+         .text {
+             text-align: center;
+             font-size: 14px;
+              padding: 5px;
+              width: 200px;
+         }
+         .titulo{
+             text-align: center;
+             font-style: italic;
+             font-size: 18px;
+              padding: 5px;
+         }
+         .logo{
+             width: 140px;
+         }
+         .di {
+           float: right;
+           width: 200px;
+         }
+         table {
+          border-style: solid;
+    border-width: 5px;
+             font-family: Verdana;
+             text-align: center;
+             width: 200px;
+         }
+         td {
+           padding: 3px;
+           text-align: left;
+         }
+        </style>
+    </head>
+    <body>
 
-<img src="{{path}}/ logo" />
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
- <h1> Listado de Estudiantes Inscritos </h1>
-<br />
 
-<table class="table table-bordered">
-                <thead>
-                  <tr>
-                    <th>Nombre</th>
-                    <th>Documento</th><th>Correo</th>
-                  </tr>
-                </thead><br />
-                    {% for estudiante in estudiantes %}
-                        <tbody>
-                          <tr>
-                              <td>
-                                <h4>{{ estudiante.id.first_name }} {{ estudiante.id.last_name }}</h4>
-                              </td>
-                              <td>
-                                <h4>{{ estudiante.documento }}</h4>
-                              </td>
-                              <td>
-                                <h4>{{ estudiante.id.email }}</h4>
-                              </td>
-                          </tr>
-                         </tbody>
-                    {% endfor %}
-                 </table>
+    <div class="panel-heading">
+        <h3 class="titulo"><i class="fa fa-list-alt fa-fw"></i> Lista de Estudiantes Inscritos</h3>
+    </div>
+
+    <table>
+    <thead>
+      <tr>
+        <th class="text">Nombre</th>
+        <th class="text">Documento</th>
+        <th class="text">Usuario</th>
+          <th class="text">Correo</th>
+      </tr>
+    </thead>
+        {% for estudiante in estudiantes %}
+            <tbody>
+              <tr>
+                  <td>
+                    <h4>{{ estudiante.estudiante.id.first_name }} {{ estudiante.estudiante.id.last_name }}</h4>
+                  </td>
+                  <td>
+                    <h4>{{ estudiante.estudiante.documento }}</h4>
+                  </td>
+                  <td>
+                    <h4>{{ estudiante.estudiante.id.username }}</h4>
+                  </td>
+                  <td>
+                    <h4>{{ estudiante.estudiante.id.email }}</h4>
+                  </td>
+              </tr>
+             </tbody>
+        {% endfor %}
+     </table>
+               
+</body>
+</html>
