--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -21,6 +21,9 @@
     <link href="{% static 'css/plugins/morris.css' %}" rel="stylesheet">
     <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
 
+    {% block head %}
+    {% endblock %}
+
 </head>
 
 <body>
