--- a/templates/paginaDocente/edit-notas.html
+++ b/templates/paginaDocente/edit-notas.html
@@ -35,31 +35,19 @@
                     <form id="edit_nota" action="#" method="post">
                     {% csrf_token %}
                       <div class="form-group">
+
                         <div class="col-md-7 col-lg-7">
                         {% for row in notas %}
+                        <div id="grupo" hidden="true">{{row.grupo_estudiante.id}}</div>
                           <div class="col-md-2 col-lg-2">
                             <strong style="font-size: 18px;"> <p>Nota</p> </strong>
                           </div>
-                            <div class="col-md-5 col-lg-5"><input class="form-control" type="text" id="nota" name="nota" value="{{row.nota}}">
-                          </div> 
+                            <div class="col-md-5 col-lg-5" id="nota"><input class="form-control" name="nota" type="text" value="{{row.nota}}"></div> 
                           <div class="col-lg-12 col-md-12"></div>
                           <div class="col-md-2 col-lg-2">
-                            <strong style="font-size: 17px;"> <p>Detalle</p> </strong>
+                            <strong style="font-size: 17px;" > <p>Detalle</p> </strong>
                           </div>
-                            <div class="col-md-5 col-lg-5"><input class="form-control" type="text" id="detalle" name="detalle" value="{{row.detalle}}">
-                          </div> 
-                          <div class="col-lg-12 col-md-12"></div>
-                          <div class="col-md-2 col-lg-2">
-                            <strong style="font-size: 17px;"> <p>Actividad</p> </strong>
-                          </div>
-
-                          <div class="col-md-5 col-lg-5">
-                            <select class="form-control" id="actividad" name="actividad">
-                              <option value="" >Seleccionar</option>
-                              {% for row in actividad %}
-                               <option id='actividad' value="{{row.actividad}}">{{ row.nombre }}</option>
-                              {% endfor %}
-                            </select>
+                            <div class="col-md-5 col-lg-5" id="detalle"><input class="form-control" name="detalle" type="text" value="{{row.detalle}}">
                           </div> 
 
                           <div class="col-lg-12 col-md-12"></div>
@@ -68,7 +56,7 @@
                            <br/><br/>
                            <br/><br/>
                            <div class="col-lg-7 col-md-7 text-right">
-                             <input onclick="edit_n({{estudiante.id}})" class="btn btn-primary" type="submit" value="Guardar" />
+                             <input onclick="edit_n({{row.grupo_estudiante.estudiante.id.id}})" class="btn btn-primary" type="submit" value="Guardar" />
                              <a class="btn btn-default" href="{% url 'agregar-curso' %}">Cancelar</a>                              
                            </div>
                           {% endfor %}
@@ -90,17 +78,17 @@
 
 {% block javascript %}
 <script type="text/javascript">
-function edit_n(student){
-  // debugger
-  var pk = student;
-  var nota = ::nota::;
-  var detalle = ::detalle::;
-  var actividad = ::actividad::;
+function edit_n(id){
+  debugger
+  var pk = id;
+  var grupo = $("#grupo").html();
+  var nota = $("#nota input").html();
+  var detalle = $("#detalle input").html();
   console.log(pk);
   $('#edit_nota').submit(function() {
     $.ajax({
-            url: '/note/add/'+pk+'/student',
-            data: { "csrfmiddlewaretoken": "{{ csrf_token }}", "nota": nota, "detalle":detalle, "actividad":actividad, "estudiante" : pk },
+            url: '/note/'+pk+'/edit',
+            data: { "csrfmiddlewaretoken": "{{ csrf_token }}", "nota": nota, "detalle":detalle, "estudiante" : pk, "grupo":grupo },
             type: $(this).attr('method'),
             success: function() {
               alert("guardo nota")
