--- a/templates/paginaEstudiante/perfil-estudiante.html
+++ b/templates/paginaEstudiante/perfil-estudiante.html
@@ -17,11 +17,12 @@
         <div class="col-md-12 col-sm-12 col-lg-12">
 
                     <div class="col-md-8 col-sm-8 col-lg-8">
+                    <div id="errors" class="alert alert-danger" style="display: none"></div>
                     {% if error %}
                     <div class="alert alert-danger"> {{ error }} </div>
 
                     {% endif %}
-                    <form method="post" action="{% url 'modificar-perfil-est' %}">
+                    <form method="post" action="{% url 'modificar-perfil-est' %}" onsubmit="return principal()">
                       {% csrf_token %}
                       <div class="container-fluid">
                         <div class="row">
@@ -90,7 +91,7 @@
                             <div class="col-md-4">
                                   <div class="form-group">
                                       <label>Nacimiento</label>
-                                      <input type = "date" name="nacimiento" class="form-control" value="{{ usuario.nacimiento }}" >
+                                      <input type = "date" id="nacimiento" name="nacimiento" class="form-control" value="{{ usuario.nacimiento }}" >
                                   </div>
                               </div>
 
@@ -139,8 +140,8 @@
                                 <img src="../static/img/sidebar-5.jpg" alt="..."/>
                             </div>
                             <div class="content">
-                                <div class="author">
-                                    <img class="avatar border-gray" src=""   alt="foto" >
+                                <div class="author" style="margin-top: 40px;">
+                                    
                                       <h4 class="title">{{ user.first_name }} {{ user.last_name }}<br />
                                          <small>{{ user.username }}</small>
                                       </h4>
@@ -169,4 +170,20 @@
     </div> <!-- /container initial-->
 
     </div>
+{% endblock %}
+{% block javascript %}
+<script type="text/javascript">
+function principal(){
+  var dato = new Date(document.getElementById("nacimiento").value);
+  if(dato == "Invalid Date"){
+    var src = "<strong>ERROR: Debe escribir una fecha de nacimiento</strong> <br>";
+    $("#errors").html(src);
+    document.getElementById("errors").style.display="block";
+    return false;
+  }else {
+    return true;
+    location.reload();
+  }
+};
+</script>
 {% endblock %}
