--- a/templates/paginaDocente/perfil-profe.html
+++ b/templates/paginaDocente/perfil-profe.html
@@ -144,8 +144,8 @@
                                 <img src="../static/img/sidebar-5.jpg" alt="..."/>
                             </div>
                             <div class="content">
-                                <div class="author">
-                                    <img class="avatar border-gray" src=""   alt="foto" >
+                                <div class="author" style="margin-top: 40px;">
+                                    
                                       <h4 class="title">{{ user.first_name }} {{ user.last_name }}<br />
                                          <small>{{ user.username }}</small>
                                       </h4>
