--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm2.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm2.html
@@ -181,7 +181,7 @@
 
             <div class="col-sm-7 col-md-7">
                 <strong>{{ row.pregunta.descripcion }}</strong>
-                <input class="form-control" type="text" id="{{ row.id }}" name="{{ row.descripcion }}" value="">
+                <input class="form-control" type="text" id="{{ row.id }}" name="{{ row.descripcion }}" value="" onkeyup="this.value=this.value.toLowerCase()">
             </div>
               <br>
             {% endfor %}
@@ -216,7 +216,7 @@
 
             <div class="col-sm-7 col-md-7">
                 <strong>{{ row.pregunta.descripcion }}</strong>
-                <input class="form-control" type="text" id="{{ row.id }}" name="{{ row.descripcion }}" value="">
+                <input class="form-control" type="text" id="{{ row.id }}" name="{{ row.descripcion }}" value="" onkeyup="this.value=this.value.toLowerCase()">
             </div>
               <br>
             {% endfor %}
